<resources>
    <string name="app_name">একগুচ্ছ বাণী</string>
    <string name="writer_name">একগুচ্ছ বাণী</string>
    <string name="share">শেয়ার করুন</string>
    <string name="rating">রেটিং দিন</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="quran">আল্লাহ তায়ালার বাণী</string>
    <string name="hadis">রসূল (সাঃ)-এর বাণী</string>
    <string name="arif">আরিফ আজাদ</string>
    <string name="rumi">জালালুদ্দিন মুহাম্মদ রুমির</string>
    <string name="kunaibi">ড. ইয়াদ কুনাইবী</string>
    <string name="bilal">ড. বিলাল ফিলিপ্স</string>
    <string name="muzahid">উস্তাদা ইয়াসমিন মোজাহেদ</string>
    <string name="bahsri">হাসান আল-বাসরি(রাহি.)</string>
    <string name="hamid">ইমাম আল-গাজ্জালী(রাহি.)</string>
    <string name="taimiya">ইমাম ইবনে তাইমিয়্যা(রাহি.)</string>
    <string name="shafiyi">ইমাম শাফেয়ী(রাহি.)</string>
    <string name="sulaiman">হযরত সোলাইমান(আঃ)</string>
    <string name="kadir">আব্দুল কাদির জিলানি(রাহি.)</string>
    <string name="tarik">মাওলানা তারিক জামিল</string>
    <string name="ali">হযরত আলী (রাঃ)</string>
    <string name="abu_bakar">আবু বকর (রাঃ)</string>
    <string name="ikbal">আল্লামা ইকবাল(রাহি.)</string>
    <string name="atik">শাইখ আতিক উল্লাহ(হাফি.)</string>
    <string name="japer">জাফর বিপি</string>
    <string name="sadi">শেখ সাদী</string>
    <string name="quran1">‘তোমরা সত্যকে মিথ্যার সঙ্গে মিশ্রিত কোরো না। এবং জেনেশুনে সত্য গোপন কোরো না।’ (সুরা : বাকারা, আয়াত : ৪২)</string>
    <string name="quran2">‘তোমরা কি মানুষকে সৎকর্মের নির্দেশ দাও, আর নিজেদের বিস্মৃত হও...?’ (সুরা : বাকারা, আয়াত : ৪৪)</string>
    <string name="quran3">‘আল্লাহ তোমার প্রতি যেমন অনুগ্রহ করেছেন, তুমিও তেমন অনুগ্রহ করো। পৃথিবীতে বিপর্যয় সৃষ্টি কোরো না।’ (সুরা : কাসাস, আয়াত : ৭৭)</string>
    <string name="quran4">‘...দুষ্কৃতকারীরূপে পৃথিবীতে নৈরাজ্য সৃষ্টি কোরো না।’ (সুরা : বাকারা, আয়াত : ৬০)</string>
    <string name="quran5">‘তার চেয়ে বড় জালিম আর কে, যে আল্লাহর (ঘর) মসজিদে তাঁর নাম স্মরণ করতে বাধা দেয় এবং এর বিনাশসাধনে প্রয়াসী হয়?.....|’ (সুরা : বাকারা, আয়াত : ১১৪)</string>
    <string name="quran6">‘যখন তাদের বলা হয়, আল্লাহ যা অবতীর্ণ করেছেন, তা তোমরা অনুসরণ করো; তারা বলে, না, বরং আমরা আমাদের পিতৃপুরুষদের যাতে পেয়েছি, তার অনুসরণ করব...।’ (সুরা : বাকারা, আয়াত : ১৭০)</string>
    <string name="quran7">‘হে ঈমানদাররা, তোমরা অঙ্গীকার পূর্ণ করো...।’ (সুরা : মায়েদা, আয়াত : ১)</string>
    <string name="quran8">‘তোমরা নিজেদের মধ্যে একে অন্যের অর্থ-সম্পদ অন্যায়ভাবে গ্রাস কোরো না...।’ (সুরা : বাকারা, আয়াত : ১৮৮)</string>
    <string name="quran9">‘...সীমা লঙ্ঘন কোরো না। নিশ্চয়ই আল্লাহ সীমা লঙ্ঘনকারীদের ভালোবাসেন না।’ (সুরা : বাকারা, আয়াত : ১৯০)</string>
    <string name="quran10">‘তোমরা আল্লাহর পথে ব্যয় করো...।’ (সুরা : বাকারা, আয়াত : ১৯৫)</string>
    <string name="quran11">‘মানুষ তোমাকে এতিমদের সম্পর্কে জিজ্ঞাসা করে, বলে দাও, তাদের জন্য সুব্যবস্থা করা উত্তম...।’ (সুরা : বাকারা, আয়াত : ২২০)</string>
    <string name="quran12">‘তোমরা ঋতুস্রাবের সময় যৌন সঙ্গম কোরো না। (সুরা : বাকারা, আয়াত : ২২২)</string>
    <string name="quran13">‘প্রতিদান কামনা করে দান বিনষ্ট কোরো না।’ (সুরা : বাকারা, আয়াত : ২৬৪)</string>
    <string name="quran14">‘হে মুমিনরা! তোমরা আল্লাহর উদ্দেশে সাক্ষ্যদানের ক্ষেত্রে সত্যের ওপর প্রতিষ্ঠিত থাকবে।’ (সুরা মায়িদা, আয়াত : ৮)</string>
    <string name="quran15">‘হে মুমিনরা! তোমরা অঙ্গীকার পূর্ণ করো।’ (সুরা মায়িদা, আয়াত : ১)</string>
    <string name="quran16">‘তাদের অনেককেই তুমি দেখবে পাপে, সীমালঙ্ঘনে ও অবৈধ ভক্ষণে তৎপর। তারা যা করে নিশ্চয় তা নিকৃষ্ট।’ (সুরা মায়িদা, আয়াত : ৬২)</string>
    <string name="quran17">‘তোমরা আল্লাহর অনুগ্রহ থেকে নিরাশ হয়ো না।’(সুরা : আরাফ, আয়াত : ১৩)</string>
    <string name="quran18">‘সেখানে রয়েছে এমন মানুষ, যারা পবিত্রতা অর্জন করতে পছন্দ করে। আর আল্লাহ পবিত্রতা অর্জনকারীকে ভালোবাসেন।’ (সুরা : তাওবা, আয়াত : ১০৮)</string>
    <string name="quran19">‘অতঃপর যারা অজ্ঞতাবশত মন্দ কাজ করে তারা পরে তওবা করলে এবং নিজেদের সংশোধন করলে তাদের প্রতি তাদের প্রতিপালক অবশ্যই অতি ক্ষমাশীল, পরম দয়ালু।’ (সুরা : নাহল, আয়াত : ১১৯)</string>
    <string name="quran20">‘তুমি আল্লাহর পথে প্রজ্ঞা ও উত্তম উপদেশের মাধ্যমে আহ্বান করো। তাদের সঙ্গে উত্তম পন্থায় বিতর্কে লিপ্ত হও। নিশ্চয় তোমার প্রভু পথভ্রষ্টদের সম্পর্কে সবিশেষ অবগত এবং সত্য পথের অনুসারীদের ব্যাপারেও সর্বোত্তম জানেন।’ (সুরা : নাহল, আয়াত : ১২৫)</string>
    <string name="quran21">‘দারিদ্র্যের ভয়ে তোমরা সন্তান হত্যা কোরো না। তাদের এবং তোমাদের আমিই জীবিকা প্রদান করি। নিশ্চয় তাদের হত্যা করা মহাপাপ।’ (সুরা : বনি ইসরাইল, আয়াত : ৩১)</string>
    <string name="quran22">‘যে বিষয়ে তোমার জ্ঞান নেই তার অনুসরণ কোরো না। নিশ্চয় কান, চোখ, হৃদয়—এর প্রত্যেকটি সম্পর্কে জিজ্ঞেস করা হবে।’ (সুরা : বনি ইসরাইল, আয়াত : ৩২)</string>
    <string name="quran23">‘হে মুমিনরা! অন্যের ঘরে অনুমতি গ্রহণ বা সালাম প্রদান না করে প্রবেশ কোরো না। এটাই তোমাদের জন্য উত্তম, যদি তোমরা উপদেশ গ্রহণ করো।’(সুরা : নুর, আয়াত : ২৭)</string>
    <string name="quran24">‘...দুষ্কৃতকারীরূপে পৃথিবীতে নৈরাজ্য সৃষ্টি কোরো না।’ (সুরা : বাকারা, আয়াত : ৬০)</string>
    <string name="quran25">হে ঈমানদারগন, তোমরা সাহায্য চাও সবর ও সালাতের মাধ্যমে, নিশ্চয় আল্লাহ সবরকারীদের সাথে আছেন। -সূরা বাকারা,১৫৩।</string>
    <string name="quran26">‘আল্লাহ তোমার প্রতি যেমন অনুগ্রহ করেছেন, তুমিও তেমন অনুগ্রহ করো। পৃথিবীতে বিপর্যয় সৃষ্টি কোরো না।’ (সুরা : কাসাস, আয়াত : ৭৭)</string>
    <string name="quran27">‘তুমি সংযতভাবে পথ চলো এবং তোমার কণ্ঠস্বর নিচু রাখো। নিশ্চয়ই গাধার স্বর সর্বাধিক শ্রুতিকটু। (সুরা লোকমান, আয়াত : ১৯)</string>
    <string name="quran28">‘তোমরা ঘরে অবস্থান করো এবং পূর্ববর্তী জাহেলি (বর্বর) যুগের মতো নিজেদের প্রদর্শন করে বেড়াবে না।’ (সুরা আহজাব, আয়াত : ৩৩)</string>
    <string name="quran29">‘বলুন! হে আমার বান্দাগণ তোমাদের মধ্যে যারা নিজেদের প্রতি অবিচার করেছ, তোমরা আল্লাহর রহমত থেকে নিরাশ হয়ো না। নিশ্চয়ই আল্লাহ সব গুনাহই ক্ষমা করে দেবেন। নিশ্চয়ই তিনি ক্ষমাশীল ও দয়ালু।’ (সুরা ঝুমার, আয়াত : ৫৩)</string>
    <string name="quran30">‘তোমরা তোমাদের প্রতিপালকের অভিমুখী হও এবং তাঁর নিকট আত্মসমর্পণ করো; তোমাদের ওপর শাস্তি আসার আগে, যখন তোমাদের সাহায্য করা হবে না।’(সুরা ঝুমার, আয়াত : ৫৪)</string>
    <string name="quran31">‘(মুমিনরা) পরস্পরের সঙ্গে পরামর্শ করে কাজ করে।’ (সুরা শুরা, আয়াত : ৩৮)</string>
    <string name="quran32">‘মুমিনরা পরস্পর ভাই ভাই। সুতরাং তোমরা ভাইদের ভেতর শান্তি স্থাপন করো আর আল্লাহকে ভয় করো যাতে তোমরা অনুগ্রহপ্রাপ্ত হও।’ (সুরা হুজরাত, আয়াত : ১০)</string>
    <string name="quran33">‘মুমিনরা অধিক পরিমাণে সন্দেহ করা থেকে বিরত থাকো। নিশ্চয়ই কিছু কিছু সন্দেহ পাপতুল্য।’ (সুরা হুজরাত, আয়াত : ১২)</string>
    <string name="quran34">‘তোমরা পরস্পরের অনুপস্থিতিতে নিন্দা করো না। তোমাদের কেউ কি তার মৃত ভাইয়ের গোশত খেতে পছন্দ করবে? বস্তুত তোমরা তা ঘৃণা করো। আল্লাহকে ভয় করো। নিশ্চয়ই আল্লাহ ক্ষমাশীল ও দয়ালু।’ (সুরা হুজরাত, আয়াত : ১২)</string>
    <string name="quran35">‘হে মানুষ! আমি তোমাদেরকে সৃষ্টি করেছি এক পুরুষ ও এক নারী থেকে। অতঃপর তোমাদের বিভক্ত করেছি বিভিন্ন জাতি ও গোত্রে, যাতে তোমরা একে অপরের সঙ্গে পরিচিত হতে পারো। তোমাদের মধ্যে সেই ব্যক্তি আল্লাহর কাছে অধিক সম্মানিত যে আল্লাহকে অধিক ভয় করে। নিশ্চয়ই আল্লাহ সব কিছু জানেন এবং সব কিছুর খবর রাখেন।’ (সুরা : হুজরাত, আয়াত : ১৩)</string>
    <string name="quran36">‘তোমরা আল্লাহ ও তাঁর রাসুলের ওপর বিশ্বাস স্থাপন করো এবং আল্লাহ তোমাদেরকে যা কিছুর উত্তরাধিকারী করেছেন তা থেকে ব্যয় করো। তোমাদের মধ্যে যারা ঈমান আনে ও ব্যয় করে, তাদের জন্য রয়েছে মহাপুরস্কার।’ (সুরা : হাদিদ, আয়াত : ৭)</string>
    <string name="quran37">‘তোমাদের মধ্যে যারা ঈমান এনেছে এবং যাদেরকে জ্ঞান দান করা হয়েছে তাদের মর্যাদা বৃদ্ধি করবেন। তোমরা যা করো আল্লাহ তা সম্মুখ অবগত।’(সুরা : মুজাদালা, আয়াত : ৫৮)</string>
    <string name="quran38">‘যারা দ্বিনের ব্যাপারে তোমাদের বিরুদ্ধে যুদ্ধ করেনি এবং তোমাদেরকে নিজ মাতৃভূমি থেকে বের করে দেয়নি, তাদের প্রতি মহানুভবতা প্রদর্শন ও ন্যায়বিচার করতে আল্লাহ তোমাদের নিষেধ করেননি।’ (সুরা : মুমতাহিনা, আয়াত : ৮)</string>
    <string name="quran39">‘নিশ্চয় আপনার প্রতিপালক জানেন যে আপনি জাগরণ করেন কখনো রাতের প্রায় দুই-তৃতীয়াংশ, কখনো অর্ধাংশ এবং কখনো এক-তৃতীয়াংশ; জাগে তোমার সঙ্গে যারা আছে তাদের একটি দলও। আল্লাহই নির্ধারণ করেন দিন-রাতের পরিমাণ।’ (সুরা : মুজাম্মিল, আয়াত : ২০)</string>
    <string name="quran40">‘বলুন! আল্লাহ এক-অদ্বিতীয়, তিনি অমুখাপেক্ষী, তিনি কাউকে জন্ম দেননি এবং তাঁকেও কেউ জন্ম দেয়নি। এবং তাঁর সমতুল্য কেউ নেই।’ (সুরা : ইখলাস)</string>
    <string name="hadis1">রাসূল (সা:)বলেছেন আমার কথা (অন্যদের কাছে) পৌছিয়ে দাও, তা যদি একটি আয়াতও হয়। (সহীহ বুখারীঃ ৩২১৫)</string>
    <string name="hadis2">রাসূল (সাঃ) বলেছেন, \nকোন ব্যক্তির মিথ্যাবাদী হওয়ার জন্য এতটকুই যথেষ্ঠ যে, সে যা শোনে (যাচাই ব্যতীত) তাই বলে বেড়ায়। (সহীহ মুসলিম, মুকাদ্দামা, অনুচ্ছেদ ৩)</string>
    <string name="hadis3">রাসূল (সাঃ) বলেছেনঃ \nযে ব্যক্তি আমার প্রতি মিথ্যা আরোপ করবে সে জাহান্নামে যাবে। (দেখুন সহীহ বুখারীঃ ১০৭,১০৯,১০৯,১১০,১১১ সহীহ মুসলিম, মুকাদ্দামা)</string>
    <string name="hadis4">পিতা-মাতার সন্তুষ্টিতে আল্লাহ্ সন্তুষ্ট আর পিতা- মাতার অসন্তুষ্টে আল্লাহ্ অসন্তুষ্ট। (তিরমিযী, সনদ হাসান, মিশকাত হা/৪৭১০)</string>
    <string name="hadis5">পাঁচ ওয়াক্ত সলাত আদায় করলে পঞ্চাশ ওয়াক্ত সলাতের সওয়াব পাওয়া যায় (সহীহ বুখায়, মুসলিম ও তিরমিযীঃ ২১৩)</string>
    <string name="hadis6">ব্যক্তি এবং শিরক ও কুফরের মাঝ খানে সলাত ছেড়ে দেওয়াই হচ্ছে ব্যবধান। (সহীহ মুসলিমঃ ১৫৪,১৫৫, মিশকাত)</string>
    <string name="hadis7">ক্বিয়ামতের দিন বান্দার কাজসমূহের মধ্যে সর্বপ্রথম সলাতের হিসাব নেওয়া হবে। (সহীহ তিরমিযীঃ ৪১৩, ইবনু মাযাহঃ ১৪২৫,১৪২৬)</string>
    <string name="hadis8">যে ব্যক্তি ফজর ও আসরের নামায আদায় করবে সে জান্নাতে যাবে। (সহীহ বুখারীঃ ৫৪৬)</string>
    <string name="hadis9">আল্লাহ্ তাআলার নিকট প্রিয় ঐ আমল যা নিয়মিত করা হয় যদিও তা অল্প হয়। (সহীহ বুখারীঃ ৪১,৬০২০)</string>
    <string name="hadis10">যে ব্যক্তি (পুরুষ) পায়ের টাখনুর নিচে কাপড় ঝুলিয়ে পরবে, সে জাহান্নামী। (সহীহ বুখারীঃ৫৩৭১, মিশকাত, হা/৪১২৫)</string>
    <string name="hadis11">কালিজিরায় মৃত্যু ছাড়া আর সকল রোগের চিকিৎসা রয়েছে। (বুখারী, হা/৫২৮৬ ও মুসলিম)</string>
    <string name="hadis12">নবী করীম (সাঃ) মিষ্টি ওমধু খুব ভালো বাসতেন। (বুখারী, হা:৫২৮০)</string>
    <string name="hadis13">যারা আমার সুন্নতের প্রতি বিরাগ পোষন (অনিহা প্রকাশ) করবে, তারা আমার উম্মতের অন্তর্ভূক্ত নয়। (সহীহ বুখারীঃ ৪৬৯৭)</string>
    <string name="hadis14">যে ব্যক্তি বিদআত সৃষ্টি করবে ও আশ্রয় দিবে তার উপর আল্লাহ্ তাআলার, ফেরেশতা ও সকল মানব সম্প্রদায়ের লানত । (সহীহ বুখারীঃ ৬৮০৮)</string>
    <string name="hadis15">যার অন্তরে সরিষা সমপরিমাণ ঈমান আছে, সে জাহান্নামে যাবে না। আর যার অন্তরে সরিষা সমপরিমাণ অহংকার আছে সে জান্নাতে যাবে না। (মুসলিম, মিশকাত হা/৫১০৮)।</string>
    <string name="hadis16">যে ঘরে কুকুর ও (প্রাণীর) ছবি থাকে,সে ঘরে রহমতের ফেরেশতা প্রবেশ করে না। (সহীহ বুখারীঃ ২৯৯৮, ৫৫২৫, মিশকাত হাঃ৪২৯৮)</string>
    <string name="hadis17">তিন ব্যক্তির দিকে কিয়ামতের দিন আল্লাহ্ তাদের দিকে করুণার দৃষ্টি দিবেন না ও তাদের জন্য কঠিন শাস্তি (ক) গিঁটের নিচে কাপড় পরিধানকারী পুরুষ (খ) খোঁটাদানকারী (গ) মিথ্যা কসমে পণ্য বিক্রয়কারী। (মুসলিম, মিশকাত হা/২৬৭৩)</string>
    <string name="hadis18">"যে ব্যক্তি মারা গেল অথচ জিহাদ করেনি এমনকি জিহাদের আকাঙ্ক্ষাও ব্যক্ত করেনি, সে মুনাফিকের ন্যায় মৃত্যুবরণ করল।" (সহীহ মুসলিমঃ ৪৭৭৯, নাসায়ীঃ ৩০৯৯)</string>
    <string name="hadis19">আত্নীয়ের সাথে ভালো ব্যবহার করলে রিযিক ও হায়াত বৃদ্ধি পায়। (সহীহ বুখারীঃ ৫৫৫৯,৫৫৬০)</string>
    <string name="hadis20">কেউ সওয়াল থেকে পবিত্র থাকতে চাইলে আল্লাহ্ তাকে পবিত্র রাখেন। যে অমুখাপেক্ষী থাকতে চায়, আল্লাহ্ তাকে অমুখাপেক্ষী রাখেন এবং যে ধৈর্য ধারণ করতে চায়, আল্লাহ্ তাকে তাই দান করেন। ধৈর্যের চায়ে অধিক ব্যাপক কিছু দান করা হয়নি। (সহীহ বুখারী, হা/১৪৬৯, সহীহ মুসলিম, সহীহ আবু দাউদ, হা/১৬৪৪)</string>
    <string name="hadis21">বিনা হিসেবে জান্নাতে যাবে (সত্তর হাজার) ওসব লোক যারা অশুভ অমঙ্গল চিহ্ন মানে না,যারা ঝাড়-ফুক করায় না, যারা মন্ত্রতন্ত্রের ধার ধারে না এবং আগুনে পোড়া লোহার দাগ লাগায় না ; বরং সদা সর্বদা তাদের পরোয়ারদেগারের উপর পূর্ণ ভরসা রাখে। (সহীহ বুখারী, হাদিস ৫৩৪১,৬২৮,৬০৯৯)</string>
    <string name="hadis22">যে ব্যক্তি নিষ্ঠার সাথে শহীদি মৃত্যু কামনা করে, আল্লাহ্ তাকে শহীদদের মর্যাদায় পৌছিয়ে দিবেন, যদিও সে তার বিছানায় মৃত্যুবরণ করে। (সহীহ মুসলিমঃ ৪৭৭৮)</string>
</resources>